--- a/Architecture/app/build.gradle
+++ b/Architecture/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
     def lifecycle_version = "2.2.0"
     def arch_version = "2.1.0"
