--- a/Architecture/app/src/main/AndroidManifest.xml
+++ b/Architecture/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo_launcher"
-        android:label="Azure notes"
+        android:label="A-900 Study notes"
         android:roundIcon="@drawable/logo_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddNoteActivity"
+        <activity android:name=".AddEditNoteActivity"
     android:parentActivityName=".MainActivity"> </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
