--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.CreateUserActivity"></activity>
-        <activity android:name=".ui.LoginActivity" />
+        <activity android:name=".Controller.CreateUserActivity"></activity>
+        <activity android:name=".Controller.LoginActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
