--- a/PluralSightKotlin/app/src/main/AndroidManifest.xml
+++ b/PluralSightKotlin/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.e.pluralsight_kotlin">
+    package="com.jwhh.notes">
 
     <application
         android:allowBackup="true"
@@ -10,20 +10,28 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".NoteListActivity"
+            android:name="com.jwhh.notes.NoteActivity"
+            android:label="Edit Note"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="com.jwhh.notes.NoteListActivity"
             android:label="NoteKeeper"
+            android:theme="@style/AppTheme.NoActionBar">
+
+
+
+
+
+        </activity>
+        <activity
+            android:name="com.jwhh.notes.ItemsActivity"
+            android:label="@string/title_activity_items"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".NoteActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-
         </activity>
     </application>
 
